<resources>
    <string name="app_name">Music Player</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="song_one">Song #1</string>
    <string name="song_two">Song #2</string>
    <string name="song_three">Song #3</string>
    <string name="main_menu">Main Menu</string>


</resources>
