<?xml version="1.0" encoding="utf-8"?>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#303030"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.musicplayer.MainActivity">

        <TextView
            android:id="@+id/song_one"
            style="@style/TextViewStyle"
            android:text="@string/song_one" />

        <TextView
            android:id="@+id/song_two"
            style="@style/TextViewStyle"
            android:text="@string/song_two" />

        <TextView
            android:id="@+id/song_three"
            style="@style/TextViewStyle"
            android:text="@string/song_three" />

    </LinearLayout>
