<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_song_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicplayer.SongOneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/previous_song"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/back" />

    <TextView
        android:id="@+id/next_song"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/next" />

    </LinearLayout>

    <Button
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/TextViewStyle"
        android:text="@string/main_menu"/>

</RelativeLayout>



